fixed dark mode on everything but profile image

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -99,7 +99,7 @@
     flex-direction: row;
     padding: .5rem 0;
     background: var(--primary-color);
-    // box-shadow: 2px 2px 9px var(--secondary-color);
+    box-shadow: 2px 2px 9px var(--secondary-color);
     border-top: 1px solid var(--secondary-color);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
